--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper container">
-      <a routerLink="" class="brand-logo grey-text text-darken-2">EZ</a>
+      <a routerLink="/" class="brand-logo grey-text text-darken-2">EZ</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li>
           <a routerLink="/about" class="grey-text text-darken-2">About</a>
+        </li> 
+        <li>
+          <a routerLink="/skills" class="grey-text text-darken-2">Skills</a>
         </li>
         <li>
           <a routerLink="/work" class="grey-text text-darken-2">Portfolio</a>
@@ -12,6 +15,7 @@
         <li>
           <a routerLink="/contact" class="grey-text text-darken-2">Contact</a>
         </li>
+       
       </ul>
     </div>
   </nav>
