--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,11 +1,9 @@
 <div class="valign-wrapper" id="hero"> 
-  
     <div class="carousel">
-        <a class="carousel-item" href="#one!">Briliant</a>
-        <a class="carousel-item" href="#two!">Smart</a>
-        <a class="carousel-item" href="#three!">Simple</a>
-        <a class="carousel-item" href="#four!">Pretty</a>
-        <a class="carousel-item" href="#five!">Stylish</a>
+        <a class="carousel-item" href="#one!" id="one">Briliant</a>
+        <a class="carousel-item" href="#two!" id="two">Smart</a>
+        <a class="carousel-item" href="#three!" id="three">Simple</a>
+        <a class="carousel-item" href="#four!" id="four">Pretty</a>
+        <a class="carousel-item" href="#five!" id="five">Stylish</a>
     </div>
-  
 </div>
