--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,11 @@
 <div class="valign-wrapper" id="hero"> 
     <div class="carousel">
-        <a class="carousel-item" href="#one!" id="one">Briliant</a>
-        <a class="carousel-item" href="#two!" id="two">Smart</a>
-        <a class="carousel-item" href="#three!" id="three">Simple</a>
-        <a class="carousel-item" href="#four!" id="four">Pretty</a>
-        <a class="carousel-item" href="#five!" id="five">Stylish</a>
+        <a class="carousel-item" href="#one!" id="one">Angular</a>
+        <a class="carousel-item" href="#two!" id="two">CSS</a>
+        <a class="carousel-item" href="#three!" id="three">javaScript</a>
+        <a class="carousel-item" href="#four!" id="four">Bootstrap</a>
+        <a class="carousel-item" href="#five!" id="five">Wordpress</a>
     </div>
+    <img class="logo" src="../../assets/img/bootstrap-stack.png" width="200px">
+    <img class="logo2" src="../../assets/img/wordpress.png" width="200px">
 </div>
