bugg loading page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper container">
-      <a routerLink="/" class="brand-logo grey-text text-darken-2">EZ</a>
+      <a routerLink="/" id="homeLink" class="brand-logo grey-text text-darken-2">EZ</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li>
           <a routerLink="/about" class="grey-text text-darken-2">About</a>
