--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -3,41 +3,23 @@
     <h1>Portfolio</h1>
   </div>
     <div class="row">
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="../assets/img/pastel-girl.jpg">
-              <span class="card-title">Card Title</span>
-              <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <img src="../assets/img/pastel-girl.jpg">
-                <span class="card-title">Card Title</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m4">
-              <div class="card">
-                <div class="card-image">
-                  <img src="../assets/img/pastel-girl.jpg">
-                  <span class="card-title">Card Title</span>
-                  <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-                </div>
-                <div class="card-content">
-                  <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                </div>
-              </div>
-            </div>
+    <div class="col m4">
+      <img class="responsive-img image" src="../assets/img/pastel-girl.jpg">
+      <div class="overlay">
+        <div class="text">Comoba</div>
+      </div>
+    </div>
+    <div class="col m4">
+      <img class="responsive-img image" src="../assets/img/pastel-girl.jpg">
+      <div class="overlay">
+        <div class="text">Sociologijos akademija</div>
+      </div>
+    </div>
+    <div class="col m4">
+      <img class="responsive-img image" src="../assets/img/pastel-girl.jpg">
+      <div class="overlay">
+        <div class="text">Sporto kadras</div>
+      </div>
+    </div>
       </div>
 </div>
