--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,60 +1,3 @@
-<div class="navbar-fixed">
-  <nav>
-    <div class="nav-wrapper container">
-      <a routerLink="/" id="homeLink" class="brand-logo grey-text text-darken-2">EZ</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>
-          <a routerLink="/about" class="grey-text text-darken-2">About</a>
-        </li> 
-        <li>
-          <a routerLink="/skills" class="grey-text text-darken-2">Skills</a>
-        </li>
-        <li>
-          <a routerLink="/work" class="grey-text text-darken-2">Portfolio</a>
-        </li>
-        <li>
-          <a routerLink="/contact" class="grey-text text-darken-2">Contact</a>
-        </li>
-       
-      </ul>
-    </div>
-  </nav>
-</div>
-<div class="patern"></div>
-<footer class="page-footer">
-  <!-- <div class="container">
-    <div class="row"> -->
-  <div>
-    <ul>
-      <li>
-        <a class="grey-text text-darken-2" href="#!">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-      </li>
-      <li>
-        <a class="grey-text text-darken-2" href="#!">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </li>
-      <li>
-        <a class="grey-text text-darken-2" href="#!">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        </a>
-      </li>
-      <li>
-        <a class="grey-text text-darken-2" href="#!">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <!-- </div>
-  </div> -->
-  <div class="footer-copyright">
-    <div class="container grey-text text-darken-2">
-      © 2018 Copyright Text
-    </div>
-  </div>
-</footer>
-
+<app-nav></app-nav>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
