--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,32 +2,43 @@
     <div class="carousel">
         <div class="carousel-item" id="one">
             <a href="#one!">Angular</a>
-            <div>
-                <circle-progress 
-                [percent]="85" 
-                [radius]="60" 
-                [outerStrokeWidth]="12" 
-                [innerStrokeWidth]="6" 
-                [outerStrokeColor]="gray" 
-                [innerStrokeColor]="grey"
-                [animation]="true" 
-                [renderOnClick]="true"
-                [animationDuration]="1000">
+            <div id="prog-one">
+                <circle-progress [percent]="60" [radius]="60" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [outerStrokeColor]=" '#808080' "
+                    [innerStrokeColor]=" '#ffffff00' " [animation]="true" [renderOnClick]="true" [animationDuration]="1000">
                 </circle-progress>
             </div>
-
         </div>
         <div class="carousel-item" id="two">
             <a href="#two!">CSS</a>
+            <div id="prog-two">
+                <circle-progress [percent]="90" [radius]="60" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [outerStrokeColor]=" '#808080' "
+                    [innerStrokeColor]=" '#ffffff00' " [animation]="true" [renderOnClick]="true" [animationDuration]="1000">
+                </circle-progress>
+            </div>
         </div>
         <div class="carousel-item" id="three">
             <a href="#three!">javaScript</a>
+            <div id="prog-three">
+                <circle-progress [percent]="75" [radius]="60" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [outerStrokeColor]=" '#808080' "
+                    [innerStrokeColor]=" '#ffffff00' " [animation]="true" [renderOnClick]="true" [animationDuration]="1000">
+                </circle-progress>
+            </div>
         </div>
         <div class="carousel-item" id="four">
             <a href="#four!">Bootstrap</a>
+            <div id="prog-four">
+                <circle-progress [percent]="80" [radius]="60" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [outerStrokeColor]=" '#808080' "
+                    [innerStrokeColor]=" '#ffffff00' " [animation]="true" [renderOnClick]="true" [animationDuration]="1000">
+                </circle-progress>
+            </div>
         </div>
         <div class="carousel-item" id="five">
             <a href="#five!">Wordpress</a>
+            <div id="prog-five">
+                <circle-progress [percent]="60" [radius]="60" [outerStrokeWidth]="10" [innerStrokeWidth]="10" [outerStrokeColor]=" '#808080' "
+                    [innerStrokeColor]=" '#ffffff00' " [animation]="true" [renderOnClick]="true" [animationDuration]="1000">
+                </circle-progress>
+            </div>
         </div>
     </div>
 </div>
