--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -11,3 +11,8 @@ nav {
     background: url("../../assets/img/patern.png") repeat center;
     z-index: 1;
 }
+#canvas {
+    border: 1px solid #000;
+    width: 400px;
+    height: 400px;
+}
