--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -10,17 +10,12 @@
     right: 0;
     background-size: cover;
     height: 50vh;
-    .carousel {
-        circle-progress {
-            padding-left: 100px;
-        }
-        a {
-        font-weight: 600;
-        font-size: 100px;
-        color: #726d6f; 
-        font-family: 'Vidaloka', serif;
+    display:none;
+    h1 {
+        margin-top: -38px;
         text-align: center;
-        }       
+        font-weight: 600;
+        color: #726d6f;
     }
 }
 #prog-two, #prog-three, #prog-four, #prog-five,{
