--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
           <a routerLink="/about" class="grey-text text-darken-2">About</a>
         </li>
         <li>
-          <a routerLink="/skills" class="grey-text text-darken-2">Skills</a>
+          <a id="skillsLink" routerLink="/skills" class="grey-text text-darken-2">Skills</a>
         </li>
         <li>
           <a routerLink="/work" class="grey-text text-darken-2">Portfolio</a>
@@ -20,4 +20,6 @@
     </div>
   </nav>
 </div>
-<div class="patern"></div>
+<div class="patern">
+  <canvas id='myCanvas'></canvas>
+</div>
