--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -16,6 +16,7 @@
         text-align: center;
         font-weight: 600;
         color: #726d6f;
+        font-family: 'Vidaloka', serif;
     }
 }
 #prog-two, #prog-three, #prog-four, #prog-five,{
