--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,5 +21,5 @@
   </nav>
 </div>
 <div class="patern">
-  <canvas id='myCanvas'></canvas>
+  <!-- <canvas id='myCanvas' width="400px" height="400px"></canvas> -->
 </div>
