--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -2,17 +2,17 @@ nav {
     background-color: rgba(255, 255, 255, 0.4);
     box-shadow: none;
 }
-.patern {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 50vh;
-    background: url("../../assets/img/patern.png") repeat center;
-    z-index: 1;
-}
-#canvas {
-    border: 1px solid #000;
-    width: 400px;
-    height: 400px;
-}
+// .patern {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     height: 50vh;
+//     background: url("../../assets/img/patern.png") repeat center;
+//     z-index: 1;
+// }
+// #myCanvas {
+//     border: 1px solid #000;
+//     width: 400px;
+//     height: 400px;
+// }
