--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: 'Montserrat', sans-serif;
-    margin: 0 10px;
+    margin: 0;
+    // margin: 0 10px;
 }
 .carousel {
     position: relative;
