--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
 #hero {
-    background-color: #ff9bcd;
+    background-color: rgba(255, 184, 209, 1);
     border-top-left-radius: 70%;
     border-top-right-radius: 70%;
     transition: background-color 2s, border-top-left-radius 1s ease-in, border-top-right-radius 1s ease-in;
