--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -15,11 +15,11 @@
             text-align: center;
         }
         a {
-        font-weight: 600;
+        font-weight: 200;
         font-size: 100px;
         color: #726d6f; 
-        font-family: 'Vidaloka', serif;
         text-align: center;
+        font-family: 'Pacifico', cursive;
         }       
     }
 }
