--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -14,9 +14,10 @@
     h1 {
         margin-top: -38px;
         text-align: center;
-        font-weight: 600;
+        font-weight: 200;
         color: #726d6f;
-        font-family: 'Vidaloka', serif;
+        font-family: 'Pacifico', cursive;
+        font-size: 100px;
     }
 }
 #prog-two, #prog-three, #prog-four, #prog-five,{
