--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <app-canvas></app-canvas>
 <div class="valign-wrapper" id="hero">
   <div>
-      <h1>Better things are coming</h1>
+      <h1>Welcome</h1>
   </div>
 </div>
