--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
           <a routerLink="/work" class="grey-text text-darken-2">Portfolio</a>
         </li>
         <li>
-          <a routerLink="/contact" class="grey-text text-darken-2">Contact</a>
+          <a id="contactLink" routerLink="/contact" class="grey-text text-darken-2">Contact</a>
         </li>
 
       </ul>
