--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="input-field col s12">
           <textarea id="textarea1" class="materialize-textarea"></textarea>
-          <label for="textarea1">Textarea</label>
+          <label for="textarea1">Type your message</label>
         </div>
       </div>
       <button class="btn waves-effect waves-light" type="submit" name="action">Submit
